// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CollapsedCardText CollapsedCardText component renders correctly if color prop is set 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "red",
      "fontSize": 12,
    }
  }
>
  MockCollapsedCardText
</Text>
`;

exports[`CollapsedCardText CollapsedCardText renders according to snapshot 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#4A4A4A",
      "fontSize": 12,
    }
  }
>
  MockCollapsedCardText
</Text>
`;
